# dlnlp

./: README.md  main.py  pyproject.toml
exercise_01/: exercise_01.ipynb  exercise_01.md  preprocessing.py  training.ipynb
exercise_02/: exercise_02.ipynb  exercise_02.md  preprocessing.py
exercise_03/: exercise_03.ipynb  exercise_03.md  preprocessing.py
exercise_04/: exercise_04.ipynb  exercise_04.md
exercise_05/: exercise_05.ipynb  exercise_05.md
exercise_06/: exercise_06.ipynb  exercise_06.md
exercise_07/: exercise_07.md
exercise_08/: exercise_08.md
exercise_09/: exercise_09.md
