[project]
name = "dlnlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "numpy>=2.2.5",
    "pydantic>=2.11.4",
    "scikit-learn>=1.6.1",
    "tokenizers>=0.21.1",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "wordcloud>=1.9.4",
]
