[project]
name = "dlnlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "gensim>=4.3.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "numpy>=1.26.4",
    "pandas>=2.3.1",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "tokenizers>=0.21.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "wordcloud>=1.9.4",
]


[tool.ruff]
per-file-ignores = { "*.ipynb" = ["F811"] }
